fix(calendar/preview): don't cut off 'y's and 'g's

--- a/components/calendar/display-page.module.scss
+++ b/components/calendar/display-page.module.scss
@@ -60,8 +60,7 @@ $image-size: 160px;
     .name {
       @include typography.typography('headline5');
       color: var(--on-background);
-      margin: 16px 0 8px;
-      line-height: 1.2rem;
+      margin: 8px 0 0;
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
@@ -76,7 +75,7 @@ $image-size: 160px;
       text-transform: uppercase;
       white-space: nowrap;
       color: var(--accents-5);
-      margin-top: 8px;
+      margin-top: 2px;
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
